<resources>
    <string name="app_name">Who Tunes</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_user_nr">Name user nr %1$s</string>
    <string name="search_for_song">Search for song</string>
    <string name="enter_you_name">Enter you name</string>
    <string name="who_tunes">Who Tunes</string>
    <string name="show_right_answer">Show right answer</string>
    <string name="playing">Playing</string>
    <string name="Player_">"Player "</string>
    <string name="nr_of_players">Nr of players:</string>
    <string name="name">Name</string>
    <string name="track">Track</string>
    <string name="select">select</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="play_again">Play again</string>
    <string name="create_game">Create game</string>
    <string name="join_game">Join game</string>
    <string name="games">Games</string>
    <string name="cancel">Cancel</string>
    <string name="game_created_by">Admin %1$s</string>
    <string name="start_game">Start game</string>
    <string name="only_admin_can_start_game">Only admin can start game</string>
    <string name="log_out">Log out</string>
    <string name="play_tracks">Play tracks</string>
    <string name="login_failed">Login failed</string>
    <string name="info_dialog_title">Ho-hooo… How to play</string>
    <string name="info_dialog_message">A minimum of 3 people each pick a song. The songs will be played in random order. Easy enough right? Lets play to some sweet tunes!</string>
    <string name="info_dialog_positive_btn">Got it!</string>
    <string name="spotify_needed">Spotify needed</string>
    <string name="install_spotify">Install Spotify</string>
    <string name="need_spotify_to_play">You need Spotify to play this game</string>
    <string name="end_game">End game</string>
    <string name="show_results">Show results</string>
    <string name="start">Start</string>
    <string name="spotify_package_name">com.spotify.music</string>

    <string name="selected_track_by_artist">Selected %1$s \nby %2$s</string>
    <string name="post_playlist">Save playlist</string>

</resources>
