<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/rl_select_track"
    tools:context=".presentation.selectTrack.SelectTrackFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/searchStack"
        android:background="#222222"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:text="@string/track"
            android:gravity="center_vertical"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textColor="@color/colorAccent"
            android:layout_width="50dp"
            android:layout_height="wrap_content"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:imeOptions="actionSearch"
            android:inputType="textFilter"
            android:background="@android:color/transparent"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_gravity="center"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/search_for_song"
            android:id="@+id/searchEditText" />

        <ImageButton
            android:id="@+id/searchButton"
            android:layout_weight="4"
            android:padding="5dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_search_white_24dp"
            android:background="@android:color/transparent"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"/>

    </LinearLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_below="@+id/searchStack"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:layout_height="wrap_content"
            android:id="@+id/rv_trackList">
        </android.support.v7.widget.RecyclerView>

    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:orientation="horizontal"
        android:id="@+id/selectedTrackStack"
        android:visibility="invisible"
        android:background="@android:color/white"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:id="@+id/iv_track_card"/>

        <TextView
            android:layout_marginTop="11dp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:textColor="#333333"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:layout_marginRight="80dp"
            android:layout_marginEnd="80dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_track"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/iv_track_card"
            android:layout_toEndOf="@+id/iv_track_card"/>

        <Button
            android:text="@string/select"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:textAllCaps="true"
            android:id="@+id/btn_selectTrack"
            android:textColor="@color/colorAccent"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#333333"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginRight="80dp"
            android:layout_marginEnd="80dp"
            android:id="@+id/tv_album"
            android:layout_below="@id/tv_track"
            android:layout_toRightOf="@+id/iv_track_card"
            android:layout_toEndOf="@+id/iv_track_card"/>

    </RelativeLayout>

</RelativeLayout>
